{
  "version": 4,
  "terraform_version": "1.5.7",
  "serial": 63,
  "lineage": "b3a8f99e-f3d9-f57c-4498-36b67d93b7a9",
  "resources": [
    {
      "module": "module.ec2_dev",
      "mode": "managed",
      "type": "aws_instance",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0f918f7e67a3323f0",
            "arn": "arn:aws:ec2:ap-south-1:746669222741:instance/i-0de2979d530005f93",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0de2979d530005f93",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "New_Test",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-086e1e197e3500a4e",
            "private_dns": "ip-10-0-0-218.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.0.218",
            "public_dns": "ec2-13-234-238-220.ap-south-1.compute.amazonaws.com",
            "public_ip": "13.234.238.220",
            "region": "ap-south-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-034e6df5e5e9c7aac",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-06d58c2246015c5d5",
            "tags": {
              "Name": "DEV-EC2"
            },
            "tags_all": {
              "Name": "DEV-EC2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-02cbe688d904085f2"
            ]
          },
          "dependencies": [
            "module.sg_dev.aws_security_group.this",
            "module.vpc_dev.aws_subnet.this",
            "module.vpc_dev.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.sg_dev",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:746669222741:security-group/sg-02cbe688d904085f2",
            "description": "Common Security Group for DEV environment",
            "egress": [],
            "id": "sg-02cbe688d904085f2",
            "ingress": [],
            "name": "DEV-common-sg",
            "name_prefix": "",
            "owner_id": "746669222741",
            "region": "ap-south-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "DEV-common-sg"
            },
            "tags_all": {
              "Name": "DEV-common-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0222ed0313247bf0c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_dev.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.sg_dev",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_all_egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 0,
            "id": "sgrule-4270873864",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "region": "ap-south-1",
            "security_group_id": "sg-02cbe688d904085f2",
            "security_group_rule_id": "sgr-058bf0e3ef94dbbe4",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.sg_dev.aws_security_group.this",
            "module.vpc_dev.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.sg_dev",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "default_ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "22",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 22,
            "id": "sgrule-919368243",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "region": "ap-south-1",
            "security_group_id": "sg-02cbe688d904085f2",
            "security_group_rule_id": "sgr-0820605895bc246bd",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.sg_dev.aws_security_group.this",
            "module.vpc_dev.aws_vpc.this"
          ]
        },
        {
          "index_key": "443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 443,
            "id": "sgrule-1613488160",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "region": "ap-south-1",
            "security_group_id": "sg-02cbe688d904085f2",
            "security_group_rule_id": "sgr-003e05528eab39948",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.sg_dev.aws_security_group.this",
            "module.vpc_dev.aws_vpc.this"
          ]
        },
        {
          "index_key": "80",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 80,
            "id": "sgrule-2152083334",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "region": "ap-south-1",
            "security_group_id": "sg-02cbe688d904085f2",
            "security_group_rule_id": "sgr-0f1e0b27c244658e9",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.sg_dev.aws_security_group.this",
            "module.vpc_dev.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.sg_dev",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "extra_ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "8080",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 8080,
            "id": "sgrule-1703276301",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "region": "ap-south-1",
            "security_group_id": "sg-02cbe688d904085f2",
            "security_group_rule_id": "sgr-0a73536a1a3077854",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 8080,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.sg_dev.aws_security_group.this",
            "module.vpc_dev.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_dev",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:746669222741:internet-gateway/igw-0763f696a446462ce",
            "id": "igw-0763f696a446462ce",
            "owner_id": "746669222741",
            "region": "ap-south-1",
            "tags": {
              "Name": "DEV-igw"
            },
            "tags_all": {
              "Name": "DEV-igw"
            },
            "vpc_id": "vpc-0222ed0313247bf0c"
          },
          "dependencies": [
            "module.vpc_dev.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_dev",
      "mode": "managed",
      "type": "aws_route",
      "name": "internet_access",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0763f696a446462ce",
            "id": "r-rtb-0ff4b6003cd057caf1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "region": "ap-south-1",
            "route_table_id": "rtb-0ff4b6003cd057caf",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_dev.aws_internet_gateway.this",
            "module.vpc_dev.aws_route_table.this",
            "module.vpc_dev.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_dev",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:746669222741:route-table/rtb-0ff4b6003cd057caf",
            "id": "rtb-0ff4b6003cd057caf",
            "owner_id": "746669222741",
            "propagating_vgws": [],
            "region": "ap-south-1",
            "route": [],
            "tags": {
              "Name": "DEV-route-table"
            },
            "tags_all": {
              "Name": "DEV-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0222ed0313247bf0c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_dev.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_dev",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ac4f634dae9e15d1",
            "region": "ap-south-1",
            "route_table_id": "rtb-0ff4b6003cd057caf",
            "subnet_id": "subnet-06d58c2246015c5d5"
          },
          "dependencies": [
            "module.vpc_dev.aws_route_table.this",
            "module.vpc_dev.aws_subnet.this",
            "module.vpc_dev.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-007ea873bf1d00742",
            "region": "ap-south-1",
            "route_table_id": "rtb-0ff4b6003cd057caf",
            "subnet_id": "subnet-0e3582349cdbc145b"
          },
          "dependencies": [
            "module.vpc_dev.aws_route_table.this",
            "module.vpc_dev.aws_subnet.this",
            "module.vpc_dev.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_dev",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:746669222741:subnet/subnet-06d58c2246015c5d5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06d58c2246015c5d5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "746669222741",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-south-1",
            "tags": {
              "Name": "DEV-subnet-1"
            },
            "tags_all": {
              "Name": "DEV-subnet-1"
            },
            "vpc_id": "vpc-0222ed0313247bf0c"
          },
          "dependencies": [
            "module.vpc_dev.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:746669222741:subnet/subnet-0e3582349cdbc145b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e3582349cdbc145b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "746669222741",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-south-1",
            "tags": {
              "Name": "DEV-subnet-2"
            },
            "tags_all": {
              "Name": "DEV-subnet-2"
            },
            "vpc_id": "vpc-0222ed0313247bf0c"
          },
          "dependencies": [
            "module.vpc_dev.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_dev",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:746669222741:vpc/vpc-0222ed0313247bf0c",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-02470d8e09a754e55",
            "default_route_table_id": "rtb-0460c0a2078709c3b",
            "default_security_group_id": "sg-05acd9a06696b21ef",
            "dhcp_options_id": "dopt-0fe1ed6b70fa97e22",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0222ed0313247bf0c",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0460c0a2078709c3b",
            "owner_id": "746669222741",
            "region": "ap-south-1",
            "tags": {
              "Name": "DEV-vpc"
            },
            "tags_all": {
              "Name": "DEV-vpc"
            }
          }
        }
      ]
    }
  ]
}